# add_executable(jimmy_set_test jimmy_set_test.cpp)

# add_executable(leet_242 leet_242.cpp)
# add_executable(leet_242_array leet_242_array.cpp)
# add_executable(leet_349 leet_349.cpp)
# add_executable(leet_001 leet_001.cpp)
# add_executable(leet_454 leet_454.cpp)
# add_executable(leet_015 leet_015.cpp)

#todo 
add_executable(leet_018 leet_018.cpp)



