# add_executable(leet_144 leet_144.cpp)
# add_executable(leet_145 leet_145.cpp)
# add_executable(leet_94 leet_94.cpp)
# add_executable(leet_102 leet_102.cpp)
# add_executable(leet_226 leet_226.cpp)
# add_executable(leet_101 leet_101.cpp)
#add_executable(leet_104 leet_104.cpp)
#add_executable(leet_104_2 leet_104_2.cpp)
#add_executable(leet_111 leet_111.cpp)
#add_executable(leet_222 leet_222.cpp)
#add_executable(leet_110 leet_110.cpp)
#add_executable(leet_110_2 leet_110_2.cpp)
#add_executable(leet_257 leet_257.cpp)
#add_executable(leet_404 leet_404.cpp)
#add_executable(leet_513 leet_513.cpp)
#add_executable(leet_112 leet_112.cpp)
#add_executable(leet_106 leet_106.cpp)
add_executable(leet_654 leet_654.cpp)