#add_executable(carl05_01_226 carl05_01_226.cpp)
#add_executable(carl05_02_101 carl05_02_101.cpp)
#add_executable(carl05_03_104 carl05_03_104.cpp)
#add_executable(carl05_04_111 carl05_04_111.cpp)
#add_executable(carl05_05_222 carl05_05_222.cpp)
#add_executable(carl05_06_110 carl05_06_110.cpp)
#add_executable(carl05_07_257 carl05_07_257.cpp)
#add_executable(carl05_08_404 carl05_08_404.cpp)
#add_executable(carl05_09_513 carl05_09_513.cpp)
add_executable(carl05_10_112 carl05_10_112.cpp)